--- a/WikiPy/templates/WikiPy/tags/install-info-parser-features-table.html
+++ b/WikiPy/templates/WikiPy/tags/install-info-parser-features-table.html
@@ -9,8 +9,8 @@
     </colgroup>
     <thead>
       <tr>
-        <th>{% wpy_translate 'special.install_info.parser.'|add:feature_type|add:'.table.name.label' %}</th>
-        <th>{% wpy_translate 'special.install_info.parser.'|add:feature_type|add:'.table.extension.label' %}</th>
+        <th scope="col">{% wpy_translate 'special.install_info.parser.'|add:feature_type|add:'.table.name.label' %}</th>
+        <th scope="col">{% wpy_translate 'special.install_info.parser.'|add:feature_type|add:'.table.extension.label' %}</th>
       </tr>
     </thead>
     <tbody>
