--- a/WikiPy/templates/WikiPy/tags/install-info-resource-table.html
+++ b/WikiPy/templates/WikiPy/tags/install-info-resource-table.html
@@ -12,11 +12,11 @@
     </colgroup>
     <thead>
       <tr>
-        <th>{% wpy_translate 'special.install_info.resources.table.name.label' %}</th>
-        <th>{% wpy_translate 'special.install_info.resources.table.version.label' %}</th>
-        <th>{% wpy_translate 'special.install_info.resources.table.license.label' %}</th>
-        <th>{% wpy_translate 'special.install_info.resources.table.description.label' %}</th>
-        <th>{% wpy_translate 'special.install_info.resources.table.authors.label' %}</th>
+        <th scope="col">{% wpy_translate 'special.install_info.resources.table.name.label' %}</th>
+        <th scope="col">{% wpy_translate 'special.install_info.resources.table.version.label' %}</th>
+        <th scope="col">{% wpy_translate 'special.install_info.resources.table.license.label' %}</th>
+        <th scope="col">{% wpy_translate 'special.install_info.resources.table.description.label' %}</th>
+        <th scope="col">{% wpy_translate 'special.install_info.resources.table.authors.label' %}</th>
       </tr>
     </thead>
     <tbody>
